--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.15
   curved_labeled_navigation_bar: ^2.0.2
   carousel_slider: ^4.1.1
+  firebase_core: ^2.7.1
+  firebase_auth: ^4.2.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
